--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ docutils==0.20.1
 idna==3.6
 Kivy==2.3.0
 Kivy-Garden==0.1.5
+numpy==1.26.4
+pillow==10.2.0
 Pygments==2.17.2
 pyserial==3.5
 requests==2.31.0
